--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,5 @@ envlist = py36
 
 [testenv]
 description = Unit tests
-deps = -rrequirements.txt
-commands = python -m unittest
+deps = pytest
+commands = pytest
